force-app/main/default/objects/HRCSVC_Asset_Warranty__c/HRCSVC_Asset_Warranty__c.object-meta.xml
<CustomObject>
    <label>Asset Warranty</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Warranties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>