force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Warranties</relationshipLabel>
    <relationshipName>Asset_Warranties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>