force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset_Name__c</fullName>
    <description>SE-1616: Separate field for storing the asset name field on Asset Warranty so users can search for Asset Warranty by Asset Name</description>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>