force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancel_Date__c</fullName>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>