force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>