force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ERP_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>