force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>HRCSVC_Service_Package__c</referenceTo>
    <relationshipLabel>Asset Warranties</relationshipLabel>
    <relationshipName>Asset_Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>