force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Suspend_Flag__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Suspend_Flag__c</fullName>
    <label>Suspend Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>