force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Warranty_Start_Date__c</fullName>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>