force-app/main/default/objects/HRCSVC_Asset_Warranty__c/fields/HRCSVC_Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Warranty_Status__c</fullName>
    <formula>IF( TODAY() &gt;=  HRCSVC_Warranty_Start_Date__c &amp;&amp; TODAY() &lt;= HRCSVC_Warranty_End_Date__c, &apos;Active&apos;,  IF(TODAY() &gt; HRCSVC_Warranty_End_Date__c, &apos;Expired&apos;, &apos;Inactive&apos;) )</formula>
    <label>Warranty Status</label>
    <type>Text</type>
</CustomField>