force-app/main/default/objects/HRCSVC_Asset_Warranty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCSVC_Asset__c</columns>
    <columns>HRCSVC_Warranty_Start_Date__c</columns>
    <columns>HRCSVC_Warranty_End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HRCSVC_ERP_ID__c</columns>
    <columns>HRCSVC_Warranty_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>